--- a/package.json
+++ b/package.json
@@ -21,11 +21,12 @@
     "eslint-config-next": "13.4.7",
     "framer-motion": "^10.12.17",
     "next": "13.4.8",
+    "openai": "^6.9.1",
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hot-toast": "^2.4.1",
-    "react-icons": "^4.10.1",
+    "react-icons": "^4.12.0",
     "react-intersection-observer": "^9.13.1",
     "react-vertical-timeline-component": "^3.6.0",
     "resend": "^0.16.0",
